examples/apimanagement/namespaced/v1beta1/gatewayapi.yaml
apiVersion: apimanagement.azure.m.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: apimanagement/v1beta1/gatewayapi
  labels:
    testing.upbound.io/example-name: example
  name: gapiexample
  namespace: upbound-system
spec:
  forProvider:
    apiManagementIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    description: Example API Management gateway
    locationData:
      city: example city
      district: example district
      name: example name
      region: example region
